added TP and vaadin derby example

--- a/org.example.addon2/build.properties
+++ b/org.example.addon2/build.properties
@@ -1,5 +1,6 @@
-source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/org.example.addon2.AddonInfo.xml
+               OSGI-INF/org.example.addon2.AddonInfo.xml,\
+               OSGI-INF/org.example.addon2.PurchasingUiExtender.xml
+source.. = src/
