--- a/org.example.server.vaadin/.project
+++ b/org.example.server.vaadin/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.example.addon1</name>
+	<name>org.example.server.vaadin</name>
 	<comment></comment>
 	<projects>
 	</projects>
