--- a/org.example.addon1/build.properties
+++ b/org.example.addon1/build.properties
@@ -1,4 +1,5 @@
-source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               OSGI-INF/org.example.addon1.SalesUiExtender.xml
+source.. = src/
